Fix buttons on mobile

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -655,11 +655,6 @@ f.submit {
     font-size: .9rem;
   }
 
-  .o-btn-action {
-    line-height: 40px;
-    height: 40px;
-  }
-
   .field-sectionbreaktype p {
     font-size: 1rem;
   }
